--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/resultText"
-        android:inputType="number">
+        android:inputType="numberDecimal">
         <requestFocus />
     </EditText>
 
